--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Train Schedlue</title>
+   
+   <!-- Bootstrapp-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-
-
+    <!--Firebase-->
+    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
+    
+    <!--Moment.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
 </head>
@@ -55,8 +57,6 @@
         <div class="card mb-4">
           <div class="card-header">Add Train</div>
           <div class="card-body">
-
-            <!-- Entry Form -->
             <form>
               <div class="form-group">
                 <label for="employee-name-input">Train Name</label>
@@ -72,7 +72,7 @@
               </div>
               <div class="form-group">
                 <label for="rate-input">Frequency</label>
-                <input class="form-control" id="frequenct-input" placeholder="" type="text">
+                <input class="form-control" id="frequency-input" placeholder="" type="text">
               </div>
               <button class="btn btn-primary float-right" id="add-train-btn">Submit</button>
             </form>
@@ -82,7 +82,7 @@
       </div>
         </div>
     </div>
-    
-</body>
+ 
 <script src="assets/javascript/train.js"></script>
+</body>
 </html>
