--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <!--Firebase-->
-    <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
-    
+    <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase.js"></script>
+   
     <!--Moment.js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script> -->
 
 </head>
 <body>
