--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
     <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase.js"></script>
    
     <!--Moment.js-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
 </head>
 <body>
    
     <div class="container">
        
-    
         <div class="jumbotron">
             <h1 class="text-center">Train Schedule</h1>
         </div>
-
 
         <div class="row">
             <div class="col-md-12">
