--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="assets/css/style.css">
     <!--Firebase-->
     <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase.js"></script>
    
